WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200313
[iPadOS] slides.google.com: Full Screen API warning is presented when swiping through slides
https://bugs.webkit.org/show_bug.cgi?id=200313
Summary
[iPadOS] slides.google.com: Full Screen API warning is presented when swiping...
Nelson Thachuk
Reported
2019-07-31 13:16:52 PDT
* SUMMARY - Google Slides: Full Screen API warning is presented when swiping through slides * STEPS TO REPRODUCE 1. Navigate to
https://slides.google.com
2. Select a presentation with multiple slides 3. Click "Present" button 4. Swipe through slides * EXPECTED RESULTS - No errors * ACTUAL RESULTS - Full Screen API error: 'It loos like you are typing while in full screen. Typing is not allowed in full screen websites. "docs.google.com" may be showing a fake keyboard to trick you into disclosing personal or financial information.' * CONFIGURATION - Software: iOS 13 Beta - Hardware: iPad Pro 10.5"
Attachments
Patch
(2.17 KB, patch)
2019-08-02 11:25 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-07-31 13:22:39 PDT
<
rdar://problem/53777001
>
Jer Noble
Comment 2
2019-08-02 11:25:15 PDT
Created
attachment 375431
[details]
Patch
WebKit Commit Bot
Comment 3
2019-08-02 13:09:12 PDT
Comment on
attachment 375431
[details]
Patch Clearing flags on attachment: 375431 Committed
r248174
: <
https://trac.webkit.org/changeset/248174
>
WebKit Commit Bot
Comment 4
2019-08-02 13:09:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug